--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mim</title>
 </head>
-<link rel="stylesheet" href="Estilos//reset.css">
-<link rel="stylesheet" href="Estilos//style.css">
+<link rel="stylesheet" href="estilos//reset.css">
+<link rel="stylesheet" href="estilos//style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
