--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <main>
     <header class="cabecalho">
         <nav class="cabecalho-menu">
-            <a class="cabecalho-menu-link" href="Index.html">Home</a>
+            <a class="cabecalho-menu-link" href="index.html">Home</a>
             <a class="cabecalho-menu-link" href="about.html">Sobre mim</a>
         </nav>
     </header>
